xhr: add xhr aysnc solution

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Make Asynchronous Requests</title>
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
-  <!--<script src="../scripts/xhr-app.js" defer></script>-->
+  <script src="../scripts/xhr-app.js" defer></script>
   <!--<script src="../scripts/jquery-app.js" defer></script>-->
   <!--<script src="../scripts/fetch-app.js" defer></script>-->
 </head>
@@ -37,7 +37,7 @@
         -->
       </section>
 
-      <section class="article-container">
+      <section class="articles-container">
         <!--
         <ul>
           <li class="article">
