--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>Make Asynchronous Requests</title>
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
-  <script src="../scripts/xhr-app.js" defer></script>
-  <!--<script src="../scripts/jquery-app.js" defer></script>-->
+  <script src="../scripts/vendor/jquery.js"></script>
+
+  <!--<script src="../scripts/xhr-app.js" defer></script>-->
+  <script src="../scripts/jquery-app.js" defer></script>
   <!--<script src="../scripts/fetch-app.js" defer></script>-->
 </head>
 
