favicon: add favicon.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Make Asynchronous Requests</title>
+  <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
   <script src="../scripts/vendor/jquery.js"></script>
