fetch: add fetch solution.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
-  <script src="../scripts/vendor/jquery.js"></script>
+  <!--<script src="../scripts/vendor/jquery.js"></script>-->
 
   <!--<script src="../scripts/xhr-app.js" defer></script>-->
-  <script src="../scripts/jquery-app.js" defer></script>
-  <!--<script src="../scripts/fetch-app.js" defer></script>-->
+  <!--<script src="../scripts/jquery-app.js" defer></script>-->
+  <script src="../scripts/fetch-app.js" defer></script>
 </head>
 
 <body>
