cors: add CORS proxy from heroku.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <!--<script src="../scripts/xhr-app.js" defer></script>-->
   <!--<script src="../scripts/jquery-app.js" defer></script>-->
-  <!--<script src="../scripts/fetch-app.js" defer></script>-->
-  <script src="../scripts/fetch-async-await-app.js" defer></script>
+  <script src="../scripts/fetch-app.js" defer></script>
+  <!--<script src="../scripts/fetch-async-await-app.js" defer></script>-->
 </head>
 
 <body>
